# indagine

./: .gitignore  LOGO.md  README.md  README_OUTLINE.md  TEST.md  nightshift-security-footgun.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-SUMMARY.md  01-03-SUMMARY.md  01-USER-SETUP.md  01-foundation-VERIFICATION.md
.planning/phases/02-analysis-pipeline/: 02-03-SUMMARY.md  02-analysis-pipeline-VERIFICATION.md
.planning/phases/03-diagnosis-fixes/: 03-03-SUMMARY.md  03-USER-SETUP.md
.planning/phases/04-demo-submit/: 04-01-SUMMARY.md  04-04-PLAN.md  04-05-PLAN.md  04-05-SUMMARY.md
.planning/phases/05-perfect-stack/: 05-01-PLAN.md
demo/: recording_checklist.md  run_demo.py  sample_output.md  submission_checklist.md  voiceover.md
src/storage/: cosmos_client.py  trace_store.py
tests/: test_demo_runner.py  test_trace_store_memory.py
